.github: Make sure to deep clone on windows
Deep clones allow us to use git commands on historical commits so that
we can do things like collect test times correctly

Signed-off-by: Eli Uriegas <eliuriegas@fb.com>

ghstack-source-id: 8d047d653870984cabfbcee926cb99412d8fc1d7
Pull Request resolved: https://github.com/pytorch/pytorch/pull/62907

--- a/.github/workflows/generated-periodic-win-vs2019-cuda11-cudnn8-py3.yml
+++ b/.github/workflows/generated-periodic-win-vs2019-cuda11-cudnn8-py3.yml
@@ -55,6 +55,8 @@ jobs:
         with:
           submodules: recursive
           path: pytorch-${{ github.run_id }}
+          # deep clone, to allow use of git merge-base
+          fetch-depth: 0
       - name: Install Visual Studio 2019 toolchain
         shell: powershell
         run: |
@@ -147,6 +149,8 @@ jobs:
         with:
           submodules: recursive
           path: pytorch-${{ github.run_id }}
+          # deep clone, to allow use of git merge-base
+          fetch-depth: 0
       - name: Install Visual Studio 2019 toolchain
         shell: powershell
         run: |
