--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7789,6 +7789,7 @@ workflows:
           ios_arch: x86_64
           ios_platform: SIMULATOR
           name: pytorch_ios_12_0_0_nightly_x86_64_build
+          use_metal: "1"
       - binary_ios_build:
           build_environment: libtorch-ios-12.0.0-nightly-arm64-build
           context: org-member
@@ -7798,6 +7799,7 @@ workflows:
           ios_arch: arm64
           ios_platform: OS
           name: pytorch_ios_12_0_0_nightly_arm64_build
+          use_metal: "1"
       - binary_ios_upload:
           build_environment: libtorch-ios-12.0.0-nightly-binary-build-upload
           context: org-member
@@ -7807,6 +7809,7 @@ workflows:
           requires:
             - pytorch_ios_12_0_0_nightly_x86_64_build
             - pytorch_ios_12_0_0_nightly_arm64_build
+          use_metal: "1"
       - pytorch_linux_build:
           build_environment: pytorch-linux-xenial-py3-clang5-android-ndk-r19c-x86_32
           docker_image: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3-clang5-android-ndk-r19c
